<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/titleRoot"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/back_ground1">

  <Button
    android:id="@+id/kuma_test"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="false"
    android:layout_marginBottom="48dp"
    android:onClick="debugKuma"
    android:text="クマ動作"
    android:textSize="24sp"
    android:visibility="visible" />


  <Button
    android:id="@+id/help_button"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="48dp"
    android:onClick="startLessonListActivity"
    android:text="@string/Title_start_button"
    android:textSize="24sp"
    android:visibility="gone" />

  <Button
    android:id="@+id/start_button"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_above="@id/help_button"
    android:layout_alignLeft="@id/help_button"
    android:layout_marginBottom="22dp"
    android:onClick="startHelpActivity"
    android:text="@string/Title_how_to_play"
    android:textSize="24sp"
    android:visibility="gone" />

  <Button
    android:id="@+id/post_ques_button"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_above="@id/start_button"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="22dp"
    android:onClick="startPostQuestionnaireActivity"
    android:text="@string/post_questionnaire"
    android:textSize="24sp"
    android:visibility="visible" />

  <Button
    android:id="@+id/pre_ques_button"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_above="@id/post_ques_button"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="22dp"
    android:onClick="startPreQuestionnaireActivity"
    android:text="@string/pre_questionnaire"
    android:textSize="24sp"
    android:visibility="visible" />

  <Button
    android:id="@+id/free_button"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_above="@id/start_button"
    android:layout_alignLeft="@id/start_button"
    android:layout_marginBottom="22dp"
    android:onClick="freePlay"
    android:text="@string/Title_free_play"
    android:textSize="24sp"
    android:visibility="gone" />

  <TextView
    android:id="@+id/txtPulseLength"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/free_button"
    android:layout_alignLeft="@id/free_button"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="Small Text"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:visibility="gone" />

  <TextView
    android:id="@+id/txtFrequency"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/txtPulseLength"
    android:layout_alignLeft="@id/txtPulseLength"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="Small Text"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:visibility="gone" />

  <TextView
    android:id="@+id/txtCheck"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/txtFrequency"
    android:layout_alignLeft="@id/txtFrequency"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="Small Text"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:visibility="gone" />

</RelativeLayout>
